fix: Fix figure floting overlapping by adding display flow-root

--- a/src/stylus/align.styl
+++ b/src/stylus/align.styl
@@ -103,6 +103,7 @@
         content: '+'
 
   &-content
+    display: flow-root
     width: 100%
     height: 100%
     p
@@ -112,6 +113,7 @@
     transition: 0.2s
 
   &-section
+    display: flow-root
     position: relative
     transition: 0.2s
     *:focus
