--- a/src/stylus/theme.styl
+++ b/src/stylus/theme.styl
@@ -117,6 +117,7 @@
     text-align: center
 
   &-section
+    display: flow-root
     margin: auto
     width: 70%
     padding: 20px
